# Group-24

./: Cargo.toml  README.md  backup_log.csv  config_build.toml  cpu_usage_log.csv
Esempio/: to_save.txt
src/: analytics.rs  backup.rs  confirm_sign.rs  confirmation.rs  detector.rs  first_sign.rs  gui.rs  main.rs  play_sound.rs  screen.rs  transfer.rs  utils.rs
src/backup/: backup.rs
src/ui/: analytics.rs  backup.rs  backup_panel.rs  info.rs  mod.rs
