[package]
name = "pds_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.22", features = ["default", "glow"] }
rfd = "0.13" # File dialog library
serde = { version = "1.0", features = ["derive"] }
toml = "0.7" # TOML parsing and serialization
winapi = { version = "0.3", features = ["windef", "winuser"] }